--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
     <!-- Pie de página -->
     <hr>
-    <p style="text-align: center;">&copy; 2025 CampusCash - Todos los derechos reservados.</p>
+    
 
 </body>
+<footer><p style="text-align: center;">&copy; 2025 CampusCash - Todos los derechos reservados.</p> </footer>
 </html>
