--- a/miembros.html
+++ b/miembros.html
@@ -21,44 +21,44 @@
     <h1>Miembros del Grupo</h1>
 
     <ul>
-        <li><a href="#miembro1">Carlos Gómez</a></li>
-        <li><a href="#miembro2">Lucía Fernández</a></li>
-        <li><a href="#miembro3">Javier Martínez</a></li>
-        <li><a href="#miembro4">Ana Sánchez</a></li>
-        <li><a href="#miembro5">Pedro López</a></li>
+        <li><a href="#miembro1">Vahram Saakian</a></li>
+        <li><a href="#miembro2">Yundie Wang</a></li>
+        <li><a href="#miembro3">Natalia Pego Martínez</a></li>
+        <li><a href="#miembro4">Hua de Wu Lin</a></li>
+        <li><a href="#miembro5">Junhua Li Li</a></li>
     </ul>
 
     <section id="miembro1">
-        <h2>Carlos Gómez</h2>
-        <img src="img/carlos_gomez.jpg" alt="Foto de Carlos Gómez" width="150">
-        <p>Email: carlos.gomez@ejemplo.com</p>
+        <h2>Vahram Saakian</h2>
+        <img src="img/vhahram.jpeg" alt="Foto de Vahram Saakian" width="150">
+        <p>Email: vahramsa@ucm.es</p>
         <p>Aficiones: Amante del senderismo, la tecnología y la fotografía de paisajes.</p>
     </section>
 
     <section id="miembro2">
-        <h2>Lucía Fernández</h2>
-        <img src="img/lucia_fernandez.jpg" alt="Foto de Lucía Fernández" width="150">
-        <p>Email: lucia.fernandez@ejemplo.com</p>
+        <h2>Yundie Wang</h2>
+        <img src="img/yundie.jpeg" alt="Foto de Yundie Wang" width="150">
+        <p>Email: yundie01@ucm.es</p>
         <p>Aficiones: Apasionada por la lectura, el cine independiente y los viajes culturales.</p>
     </section>
 
     <section id="miembro3">
-        <h2>Javier Martínez</h2>
-        <img src="img/javier_martinez.jpg" alt="Foto de Javier Martínez" width="150">
-        <p>Email: javier.martinez@ejemplo.com</p>
+        <h2>Natalia Pego Martínez</h2>
+        <img src="img/natalia.jpg" alt="Foto de Natalia Pego Martínez" width="150">
+        <p>Email: npego@ucm.es</p>
         <p>Aficiones: Entusiasta del ciclismo, la música clásica y los videojuegos retro.</p>
     </section>
 
     <section id="miembro4">
-        <h2>Ana Sánchez</h2>
-        <img src="img/ana_sanchez.jpg" alt="Foto de Ana Sánchez" width="150">
+        <h2>Hua de Wu Lin</h2>
+        <img src="img/ana_sanchez.jpg" alt="Foto de Hua de Wu Lin" width="150">
         <p>Email: ana.sanchez@ejemplo.com</p>
         <p>Aficiones: Disfruta de la cocina creativa, la pintura y el yoga.</p>
     </section>
 
     <section id="miembro5">
-        <h2>Pedro López</h2>
-        <img src="img/pedro_lopez.jpg" alt="Foto de Pedro López" width="150">
+        <h2>Junhua Li Li</h2>
+        <img src="img/pedro_lopez.jpg" alt="Foto de Junhua Li Li" width="150">
         <p>Email: pedro.lopez@ejemplo.com</p>
         <p>Aficiones: Fan del fútbol, la programación y la astronomía.</p>
     </section>
