--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 
     <!-- Pie de página -->
     <hr>
-    
+    <footer>
+    <p style="text-align: center;">&copy; 2025 CampusCash - Todos los derechos reservados.</p> 
+    </footer>
 
 </body>
-<footer><p style="text-align: center;">&copy; 2025 CampusCash - Todos los derechos reservados.</p> </footer>
+
 </html>
