--- a/miembros.html
+++ b/miembros.html
@@ -7,18 +7,18 @@
 </head>
 <body>
     <!-- Navegación principal -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="detalles.html">Detalles</a></li>
-            <li><a href="bocetos.html">Bocetos</a></li>
-            <li><a href="miembros.html">Miembros</a></li>
-            <li><a href="planificacion.html">Planificación</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+      <!-- Navbar centrado -->
+      <h1>Miembros del Grupo</h1>
+      
+    <p style="text-align: center;">
+        <a href="index.html">Inicio</a>
+        <a href="detalles.html">Detalles</a>
+        <a href="bocetos.html">Bocetos</a>
+        <a href="miembros.html">Miembros</a>
+        <a href="planificacion.html">Planificación</a>
+        <a href="contacto.html">Contacto</a>
+    </p>
 
-    <h1>Miembros del Grupo</h1>
 
     <ul>
         <li><a href="#miembro1">Vahram Saakian</a></li>
@@ -30,16 +30,16 @@
 
     <section id="miembro1">
         <h2>Vahram Saakian</h2>
-        <img src="img/vhahram.jpeg" alt="Foto de Vahram Saakian" width="150">
+        <img src="img/vahram.jpg" alt="Foto de Vahram Saakian" width="150">
         <p>Email: vahramsa@ucm.es</p>
         <p>Aficiones: Amante del senderismo, la tecnología y la fotografía de paisajes.</p>
     </section>
 
     <section id="miembro2">
         <h2>Yundie Wang</h2>
-        <img src="img/yundie.jpeg" alt="Foto de Yundie Wang" width="150">
+        <img src="img/yundie.jpg" alt="Foto de Yundie Wang" width="150">
         <p>Email: yundie01@ucm.es</p>
-        <p>Aficiones: Apasionada por la lectura, el cine independiente y los viajes culturales.</p>
+        <p>Aficiones: Apasionado por la lectura, el cine independiente y los viajes culturales.</p>
     </section>
 
     <section id="miembro3">
@@ -49,17 +49,18 @@
         <p>Aficiones: Entusiasta del ciclismo, la música clásica y los videojuegos retro.</p>
     </section>
 
+
     <section id="miembro4">
         <h2>Hua de Wu Lin</h2>
-        <img src="img/ana_sanchez.jpg" alt="Foto de Hua de Wu Lin" width="150">
-        <p>Email: ana.sanchez@ejemplo.com</p>
+        <img src="img/hua.jpg" alt="Foto de Hua de Wu Lin" width="150">
+        <p>Email: huawu@ucm.es</p>
         <p>Aficiones: Disfruta de la cocina creativa, la pintura y el yoga.</p>
     </section>
 
     <section id="miembro5">
         <h2>Junhua Li Li</h2>
-        <img src="img/pedro_lopez.jpg" alt="Foto de Junhua Li Li" width="150">
-        <p>Email: pedro.lopez@ejemplo.com</p>
+        <img src="img/junhua.jpg" alt="Foto de Junhua Li Li" width="150">
+        <p>Email: juli@ucm.es</p>
         <p>Aficiones: Fan del fútbol, la programación y la astronomía.</p>
     </section>
 </body>
