--- a/contacto.html
+++ b/contacto.html
@@ -8,16 +8,14 @@
 <body>
     <header>
         <h1>Contacto</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="detalles.html">Detalles</a></li>
-                <li><a href="bocetos.html">Bocetos</a></li>
-                <li><a href="miembros.html">Miembros</a></li>
-                <li><a href="planificacion.html">Planificación</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <p style="text-align: center;">
+            <a href="index.html">Inicio</a>
+            <a href="detalles.html">Detalles</a>
+            <a href="bocetos.html">Bocetos</a>
+            <a href="miembros.html">Miembros</a>
+            <a href="planificacion.html">Planificación</a>
+            <a href="contacto.html">Contacto</a>
+        </p>
     </header>
 
     <section>
