nombre del dibujo

--- a/bocetos.html
+++ b/bocetos.html
@@ -11,7 +11,7 @@
   <div>
     <!-- Boceto 1 -->
     <div>
-      <img src="boceto1.jpeg" alt="Boceto 1">
+      <img src="Chat.jpeg" alt="Boceto 1">
       <p>Descripción breve del Boceto 1</p>
     </div>
 
