Boceto dibujo mejorado

--- a/bocetos.html
+++ b/bocetos.html
@@ -14,38 +14,56 @@
     <!-- Boceto 1 -->
    
      <div>
-      <img src="img/i2.jpeg" alt="Boceto 1">
-      <p>F1 y F2</p>
+      <img src="img/Inicio.jpeg" alt="Boceto 1">
+      <p>Tiene la funcionalidad 1 y 2, esta es la pagina principal con unos informes del mes, 
+        graficos de ingreso o gasto que se puede seleccionar por mes, dia, semana, etc, últimos movimientos.
+         Y la funcionalidad principal de ingresar cuentas(ingreso o gasto), el dia de cuenta, si es recurrente, 
+         comentarios y categorias</p>
     </div>
 
     <!-- Boceto 2 -->
    
     <div>
-        <img src="img/i3.jpeg" alt="Boceto 2">
-        <p>F2 y F3</p>
+        <img src="img/Grupo.jpeg" alt="Boceto 2">
+        <p>Tiene la funcionalidad 3, en esta pagina podremos escoger a que grupo entrar,
+           el numero de participantes por grupo y el objetivo total del grupo</p>
     </div>
 
     <!-- Boceto 3 -->
    
     <div>
-        <img src="img/i4.jpeg" alt="Boceto 3">
-        <p>F3</p>
+        <img src="img/Grupo1.jpeg" alt="Boceto 3">
+        <p>En esta imagen vemos las funcionalidades 2 y 3, estamos dentro de el grupo seleccionado y 
+          podemos apreciar la lista de integrantes a la izquierda junto a lo que han aportado.
+           En el centro hay una grafica la cual representa de forma visual las aportaciones individuales en respecto al objetivo.
+            Y en el lateral derecho encontramos los botones de 'Objetivo' y 'Gastos'</p>
     </div>
 
-    <!-- Boceto 4 -->
-    <div>
-        <img src="img/Chat.jpeg" alt="Boceto 4">
-        <p>Diseño del chat en la pagina</p>
-      </div>
+     <!-- Boceto 4 -->
+   
+     <div>
+      <img src="img/Gastos.jpeg" alt="Boceto 3">
+      <p>En esta imagen estamos en la seccion de gastos la cual representa la function 3,
+         aqui vemos una columna en la cual salen los gastos del grupo y el balance de cada integrante.
+          En un futuro se mostrara el balance total y lo que debe cata participante</p>
+  </div>
+
 
     <!-- Boceto 5 -->
+    <div>
+        <img src="img/Chat.png" alt="Boceto 4">
+        <p>Funcionalidad 4. Diseño del chat en la pagina, muestra el chat en el lateral de la pagina principal</p>
+      </div>
+
+    <!-- Boceto 6 -->
    
     <div>
-        <img src="img/i5.jpeg" alt="Boceto 5">
-        <p>F5 Administración</p>
+        <img src="img/Administrador.jpeg" alt="Boceto 5">
+        <p>Este seria el panel de administrador, la funcionalidad 5. 
+          Podemos ver que un administrador podra buscar a los usuarios segun su 'id' o 'nombre'. 
+          Tambien aparecen en la table el genero del usuario, el email, permisos y estado</p>
       </div>
     
-
     
   </div>
 
