--- a/bocetos.html
+++ b/bocetos.html
@@ -6,6 +6,16 @@
 </head>
 <body>
   <h1>Galería de Bocetos</h1>
+  <!-- Navbar centrado -->
+  <p style="text-align: center;">
+    <a href="index.html">Inicio</a>
+    <a href="detalles.html">Detalles</a>
+    <a href="bocetos.html">Bocetos</a>
+    <a href="miembros.html">Miembros</a>
+    <a href="planificacion.html">Planificación</a>
+    <a href="contacto.html">Contacto</a>
+</p>
+
   <p>Bienvenido a mi página de bocetos. Aquí podrás ver algunos de mis dibujos más recientes.</p>
 
   <div>
