--- a/bocetos.html
+++ b/bocetos.html
@@ -5,7 +5,7 @@
   <title>Bocetos</title>
 </head>
 <body>
-  <h1>Galería de Bocetos</h1>
+  <h1 style="text-align: center;">Galería de Bocetos</h1>
   <!-- Navbar centrado -->
   <p style="text-align: center;">
     <a href="index.html">Inicio</a>
