--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CampusCash - Inicio</title>
 </head>
 <body>
-    <!-- Título centrado -->
+    <!-- Título centrado ,prueba commit-->
     <h1 style="text-align: center;">Bienvenido a CampusCash</h1>
 
        <!-- Navbar centrado -->
